--- a/main-widget.ui
+++ b/main-widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>627</width>
-    <height>480</height>
+    <width>666</width>
+    <height>498</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -210,6 +210,29 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="RXFilePathLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>N/A</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QLabel" name="RXOutputFormatLabel">
+        <property name="text">
+         <string>Ouput Format: </string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0">
        <widget class="QRadioButton" name="RXASCIIRadioButton">
         <property name="sizePolicy">
@@ -226,26 +249,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0" colspan="2">
-       <widget class="QLabel" name="RXOutputFormatLabel">
+      <item row="3" column="0" colspan="2">
+       <widget class="QPushButton" name="ClearHistoryPushButton">
         <property name="text">
-         <string>Ouput Format: </string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="RXFilePathLabel">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>1</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>N/A</string>
+         <string>Clear History</string>
         </property>
        </widget>
       </item>
@@ -391,7 +398,7 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>411</width>
+       <width>450</width>
        <height>462</height>
       </size>
      </property>
