--- a/main-widget.ui
+++ b/main-widget.ui
@@ -101,7 +101,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="RemoteAddressLabel">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Remote Address: </string>
@@ -111,7 +111,7 @@
       <item row="3" column="1">
        <widget class="QLineEdit" name="RemoteAddressLineEdit">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -127,7 +127,7 @@
       <item row="4" column="0">
        <widget class="QLabel" name="RemotePortLabel">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Remote Port: </string>
@@ -137,7 +137,7 @@
       <item row="4" column="1">
        <widget class="QLineEdit" name="RemotePortLineEdit">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
