--- a/main-widget.ui
+++ b/main-widget.ui
@@ -373,6 +373,9 @@
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="TXLoopIntervalLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
@@ -386,11 +389,17 @@
       </item>
       <item row="4" column="1">
        <widget class="QLineEdit" name="TXLoopIntervalLineEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="text">
+         <string>100</string>
         </property>
        </widget>
       </item>
